--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ header ul li{
 
 .btn
 {
-    @apply bg-primary px-5 py-2 font-bold hover:border-2 border-white rounded;
+    @apply w-[140px] bg-primary m-5 mb-0 text-center px-5 py-2 font-bold hover:border-2 border-white rounded justify-center items-center; 
 
 }
 
